--- a/body-matter/3r/analisi-complexa.tex
+++ b/body-matter/3r/analisi-complexa.tex
@@ -16,7 +16,7 @@
 	\begin{definition}[Suma de nombres complexos]
 		\labelname{suma de nombres complexos}
         \label{def:suma de nombres complexos}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+		Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores definim la seva suma com
 		\[
             (a+b\iu)+(c+d\iu) = (a+c)+(b+d)\iu.
@@ -24,7 +24,7 @@
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats per la suma}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+		Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
 		\[
             (a+b\iu+c+d\iu)\in\field{C}
@@ -32,7 +32,7 @@
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten per la suma}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+		Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
 		\[
             (a+b\iu)+(c+d\iu) = (c+d\iu)+(a+b\iu).
@@ -47,7 +47,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius per la suma}
-		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
+		Siguin~\(a+b\iu\),~\(c+d\iu\) i~\(u+v\iu\) tres nombres complexos.
         Aleshores
 		\[
             (a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)
@@ -67,7 +67,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element neutre per la suma dels complexos}
-		Sigui \(a+b\iu\) un nombre complex.
+		Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
 		\[
             (a+b\iu)+0 = a+b\iu.
@@ -81,7 +81,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element invers per la suma dels complexos}
-		Sigui \(a+b\iu\) un nombre complex.
+		Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
 		\[
             (a+b\iu)+(-a-b\iu) = 0.
@@ -96,7 +96,7 @@
 	\begin{definition}[Producte de nombres complexos]
 		\labelname{producte de nombres complexos}
         \label{def:producte de nombres complexos}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+		Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores definim el seu producte com
 		\[
             (a+b\iu)\cdot(c+d\iu) = (ac-bd)+(ad+bc)\iu.
@@ -104,7 +104,7 @@
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats pel producte}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+		Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
 		\[
             (a+b\iu)(c+d\iu)\in\field{C}.
@@ -112,7 +112,7 @@
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten pel producte}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+		Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
 		\[
             (a+b\iu)(c+d\iu) = (c+d\iu)(a+b\iu).
@@ -127,15 +127,15 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius pel producte}
-		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
+		Siguin~\(a+b\iu\),~\(c+d\iu\) i~\(u+v\iu\) tres nombres complexos.
         Aleshores
 		\[
             (a+b\iu)\big((c+d\iu)(u+v\iu))\big)
             = \big((a+b\iu)(c+d\iu)\big)(u+v\iu).
         \]
 		\begin{proof}
-			Prenem \(\alpha = a+b\iu\), \(\beta = c+d\iu\)
-            i \(\gamma = u+v\iu\).
+			Prenem~\(\alpha = a+b\iu\),~\(\beta = c+d\iu\)
+            i~\(\gamma = u+v\iu\).
             Per la definició de \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
 				\alpha\big(\beta\gamma\big)
@@ -155,7 +155,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element neutre pel producte dels complexos}
-		Sigui \(a+b\iu\) un nombre complex.
+		Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
 		\[
             (a+b\iu)\cdot1 = a+b\iu.
@@ -169,7 +169,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element invers pel producte de nombres complexos}
-		Sigui \(a+b\iu\) un nombre complex.
+		Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
 		\[
             (a+b\iu)\Big(\frac{a}{a^{2}+b^{2}} + \frac{-b}{a^{2}+b^{2}}\iu\Big)
@@ -188,7 +188,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:distribuitva del producte respecte la suma de nombres complexos}
-		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
+		Siguin~\(a+b\iu\),~\(c+d\iu\) i~\(u+v\iu\) tres nombres complexos.
         Aleshores
 		\[
             (a+b\iu)\big((c+d\iu)+(u+v\iu)\big) = (a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).
@@ -209,30 +209,30 @@
 	\end{proposition}
 	\begin{corollary}
 		\label{cor:els complexos formen un cos}
-		El conjunt \(\field{C}\) amb la suma \(+\)
-        i el producte \(\cdot\) és un cos.
+		El conjunt~\(\field{C}\) amb la suma~\(+\)
+        i el producte~\(\cdot\) és un cos.
 	\end{corollary}
 	\subsection{Propietats de nombres complexos}
 	\begin{definition}[Conjugat d'un nombre complex]
 		\labelname{conjugat d'un nombre complex}
         \label{def:conjugat d'un nombre complex}
-		Sigui \(z = a+b\iu\) un nombre complex.
+		Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores definim
 		\[
             \conjugat{z} = a-b\iu
         \]
-		com el conjugat de \(z\).
+		com el conjugat de~\(z\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:el conjugat del conjugat d'un nombre complex és ell mateix}
-		Sigui \(z\) un nombre complex.
+		Sigui~\(z\) un nombre complex.
         Aleshores
 		\[
             \conjugat{\conjugat{z}} = z.
         \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que
-            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+            existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
             Aleshores per la definició
             de \myref{def:conjugat d'un nombre complex} tenim que
 			\begin{align*}
@@ -244,14 +244,14 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:el conjugat de la suma és la suma de conjugats}
-		Siguin \(z\) i \(w\) dos nombres complexos.
+		Siguin~\(z\) i~\(w\) dos nombres complexos.
         Aleshores
 		\[
             \conjugat{z+w} = \conjugat{z}+\conjugat{w}.
         \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que
-            existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
+            existeixen~\(a\),~\(b\),~\(c\),~\(d\in\field{R}\) tals que
 			\[
                 z = a+b\iu\qquad\text{i}\qquad w = c+d\iu.
             \]
@@ -270,14 +270,14 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:el conjugat del producte és el producte de conjugats}
-		Siguin \(z\) i \(w\) dos nombres complexos.
+		Siguin~\(z\) i~\(w\) dos nombres complexos.
         Aleshores
 		\[
             \conjugat{zw} = \conjugat{z}\,\conjugat{w}.
         \]
 		\begin{proof}
             Per la definició de \myref{def:nombre complex} tenim que existeixen
-            \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
+           ~\(a\),~\(b\),~\(c\),~\(d\in\field{R}\) tals que
 			\[
                 z = a+b\iu\qquad\text{i}\qquad w = c+d\iu.
             \]
@@ -297,7 +297,7 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
-		Sigui \(z = a+b\iu\) un nombre complex.
+		Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores
 		\[
             z\conjugat{z} = a^{2}+b^{2}.
@@ -313,30 +313,30 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:un nombre complex és igual al seu conjugat si i només si és un real}
-		Sigui \(z\) un nombre complex.
-        Aleshores \(z = \conjugat{z}\) si i només si \(z\in\field{R}\).
+		Sigui~\(z\) un nombre complex.
+        Aleshores~\(z = \conjugat{z}\) si i només si~\(z\in\field{R}\).
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que
-            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
-            Aleshores si tenim \(z = \conjugat{z}\), per la definició
+            existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
+            Aleshores si tenim~\(z = \conjugat{z}\), per la definició
             de \myref{def:conjugat d'un nombre complex} trobem que
 			\[
                 a+b\iu = a-b\iu,
             \]
-			que és equivalent a \(b = -b\), i per tant ha de ser \(b = 0\) i
-            trobem que \(z = a\in\field{R}\).
+			que és equivalent a~\(b = -b\), i per tant ha de ser~\(b = 0\) i
+            trobem que~\(z = a\in\field{R}\).
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:inversa d'un nombre complex en funció del seu conjugat}
-		Sigui \(z \neq 0\) un nombre complex.
+		Sigui~\(z \neq 0\) un nombre complex.
         Aleshores
 		\[
             z^{-1} = \frac{\conjugat{z}}{z\conjugat{z}}.
         \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que
-            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+            existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
             Aleshores tenim que
 			\begin{align*}
 				z\frac{\conjugat{z}}{z\conjugat{z}}
@@ -355,22 +355,22 @@
         \label{def:part real d'un nombre complex}
 		\labelname{part imaginària d'un nombre complex}
         \label{def:part imaginària d'un nombre complex}
-		Sigui \(z = a+b\iu\) un nombre complex.
+		Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores definim
 		\[
             \Re(z) = a
         \]
-		com la part real de \(z\) i
+		com la part real de~\(z\) i
 		\[
             \Im(z) = b
         \]
-		com la part imaginària de \(z\).
+		com la part imaginària de~\(z\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:fórmules per la part real i part imaginària d'un nombre complex}
 		\label{prop:fórmula per la part real d'un nombre complex}
 		\label{prop:fórmula per la part imaginària d'un nombre complex}
-		Sigui \(z\) un nombre complex.
+		Sigui~\(z\) un nombre complex.
         Aleshores
 		\[
             \Re(z) = \frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z)
@@ -378,7 +378,7 @@
         \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que
-            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+            existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
             Aleshores tenim que
 			\[
                 \frac{z+\conjugat{z}}{2} = \frac{a+b\iu+a-b\iu}{2}
@@ -398,7 +398,7 @@
 	\begin{definition}[Mòdul d'un nombre complex]
 		\labelname{mòdul d'un nombre complex}
         \label{def:mòdul d'un nombre complex}
-		Sigui \(z = a+b\iu\) un nombre complex.
+		Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores definim el seu mòdul com
 		\[
             \modul{z} = \sqrt{a^{2}+b^{2}}.
@@ -408,18 +408,18 @@
 		\label{obs:les parts real i imaginàries d'un complex són menors que el seu mòdul}
 		\label{obs:la part real d'un complex és menor que el seu mòdul}
 		\label{obs:la part imaginària d'un complex és menor que el seu mòdul}
-		\(\Re(z) \leq \modul{z}\), \(\Im(z) \leq \modul{z}\).
+		\(\Re(z) \leq \modul{z}\),~\(\Im(z) \leq \modul{z}\).
 	\end{observation}
 	\begin{proposition}
 		\label{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}
-		Sigui \(z\) un nombre complex.
+		Sigui~\(z\) un nombre complex.
         Aleshores es satisfà
 		\[
             \modul{z} = \sqrt{z\conjugat{z}}.
         \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim
-            que \(z = a+b\iu\), i per la
+            que~\(z = a+b\iu\), i per la
             proposició \myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
             trobem que
 			\begin{align*}
@@ -437,7 +437,7 @@
 	\begin{proposition}[Desigualtat triangular]
 		\labelname{desigualtat triangular}
         \label{prop:desigualta triangular nombres complexos}
-		Siguin \(z\) i \(w\) dos nombres complexos.
+		Siguin~\(z\) i~\(w\) dos nombres complexos.
         Aleshores
 		\[
             \modul{z+w} \leq \modul{z}+\modul{w}.
