Add ~ before inline math

--- a/body-matter/3r/probabilitat.tex
+++ b/body-matter/3r/probabilitat.tex
@@ -27,9 +27,9 @@
 		\begin{solution}
 			Així, els seus espais mostrals són, respectivament,
 			\begin{enumerate}
-				\item \(\Omega=\{1,2,3,4,5,6\}\).
-				\item \(\Omega=\NN\times\NN\).
-				\item \(\Omega=\{\heads,\tails\}\).\qedhere
+				\item~\(\Omega=\{1,2,3,4,5,6\}\).
+				\item~\(\Omega=\NN\times\NN\).
+				\item~\(\Omega=\{\heads,\tails\}\).\qedhere
 			\end{enumerate}
 			%TODO (?)
 		\end{solution}
@@ -60,9 +60,9 @@
 		\begin{solution}
 			Els conjunts d'esdeveniments són, respectivament,
 			\begin{enumerate}
-				\item \(A=\{2,4,6\}\).
-				\item \(A=\{(m,n)\in\NN\times\NN\mid n>m\}\).
-				\item \(A=\emptyset\).\qedhere
+				\item~\(A=\{2,4,6\}\).
+				\item~\(A=\{(m,n)\in\NN\times\NN\mid n>m\}\).
+				\item~\(A=\emptyset\).\qedhere
 			\end{enumerate}
 			%TODO (?)
 		\end{solution}
@@ -72,9 +72,9 @@
 		\labelname{àlgebra}\label{def:àlgebra}
 		Sigui~\(\algebra{A}\) una co{\lgem}ecció de subconjunts~\(\Omega\) tal que
 		\begin{enumerate}
-			\item \(\Omega\in\algebra{A}\).
+			\item~\(\Omega\in\algebra{A}\).
 			\item Si~\(A\in\algebra{A}\), aleshores~\(\Omega\setminus A\in\algebra{A}\).
-			\item Si~\(A\), \(B\in\algebra{A}\), aleshores~\(A\cup B\in\algebra{A}\).
+			\item Si~\(A\),~\(B\in\algebra{A}\), aleshores~\(A\cup B\in\algebra{A}\).
 		\end{enumerate}
 		Aleshores direm que~\(\algebra{A}\) és un àlgebra de conjunts sobre~\(\Omega\).
 	\end{definition}
@@ -214,7 +214,7 @@
 		\labelname{probabilitat}\label{def:probabilitat}
 		Siguin~\(\Algebra{A}\) una~\(\sigma\)-àlgebra sobre un conjunt~\(\Omega\) i~\(\Probabilitat\colon\Algebra{A}\longrightarrow[0,1]\) una aplicació tal que
 		\begin{enumerate}
-			\item \(\Probabilitat(\Omega)=1\).
+			\item~\(\Probabilitat(\Omega)=1\).
 			\item Per a tota família~\(\{A_{n}\}_{n\in\NN}\subseteq\Algebra{A}\) d'esdeveniments disjunts dos a dos tenim que
 			\begin{equation}
 				\Probabilitat\Big(\bigcup_{n=0}^{\infty}A_{n}\Big)=\sum_{n=0}^{\infty}\Probabilitat(A_{n}).
@@ -577,10 +577,10 @@
 		Siguin~\(A\) i~\(B\) dos esdeveniments.
 		Aleshores són equivalents
 		\begin{enumerate}
-			\item \(A\) i~\(B\) són esdeveniments independents.
-			\item \(A^{\complement}\) i~\(B\) són esdeveniments independents.
-			\item \(A\) i~\(B^{\complement}\) són esdeveniments independents.
-			\item \(A^{\complement}\) i~\(B^{\complement}\) són esdeveniments independents.
+			\item~\(A\) i~\(B\) són esdeveniments independents.
+			\item~\(A^{\complement}\) i~\(B\) són esdeveniments independents.
+			\item~\(A\) i~\(B^{\complement}\) són esdeveniments independents.
+			\item~\(A^{\complement}\) i~\(B^{\complement}\) són esdeveniments independents.
 		\end{enumerate}
 		\begin{proof}
 			%TODO
@@ -613,12 +613,12 @@
 		Sigui~\(X\colon\Omega\longrightarrow\RR\) una variable aleatòria sobre un~\(\sigma\)-àlgebra~\(\Algebra{A}\).
 		Aleshores denotem
 		\begin{enumerate}
-			\item \(\{X\in B\}=\{\omega\in\Omega\mid X(\omega)\in B\}\).
-			\item \(\{X=a\}=\{X\in\{a\}\}\).
-			\item \(\{a< X<b\}=\{X\in(a,b)\}\).
-			\item \(\{a\leq X<b\}=\{X\in[a,b)\}\).
-			\item \(\{a< X\leq b\}=\{X\in(a,b]\}\).
-			\item \(\{a\leq X\leq b\}=\{X\in[a,b]\}\).
+			\item~\(\{X\in B\}=\{\omega\in\Omega\mid X(\omega)\in B\}\).
+			\item~\(\{X=a\}=\{X\in\{a\}\}\).
+			\item~\(\{a< X<b\}=\{X\in(a,b)\}\).
+			\item~\(\{a\leq X<b\}=\{X\in[a,b)\}\).
+			\item~\(\{a< X\leq b\}=\{X\in(a,b]\}\).
+			\item~\(\{a\leq X\leq b\}=\{X\in[a,b]\}\).
 		\end{enumerate}
 	\end{notation}
 	\begin{proposition}
@@ -907,7 +907,7 @@
 		\begin{enumerate}
 			\item Per a tot~\(x\in\RR\) tenim que~\(f(x)\geq0\).
 			\item La funció~\(f\) és integrable sobre tot~\(\RR\).
-			\item \(\int_{-\infty}^{\infty}f(x)dx=1\).
+			\item~\(\int_{-\infty}^{\infty}f(x)dx=1\).
 			\item Per a tot~\(a\),~\(b\in\RR\cup\{\pm\infty\}\) tenim que
 			\[
 			    \Probabilitat\{a\leq X\leq b\}=\int_{a}^{b}f(x)dx.
