Add ~ before inline math

--- a/body-matter/3r/teoria-de-Galois.tex
+++ b/body-matter/3r/teoria-de-Galois.tex
@@ -318,8 +318,8 @@
 		Siguin~\(\FF\extensio\KK\) una extensió,~\(\alpha\in\FF\) un element algebraic sobre~\(\KK\) i~\(p(x)\in\KK[x]\) un polinomi mònic tal que~\(p(\alpha)=0\).
 		Aleshores són equivalents
 		\begin{enumerate}
-		\item\label{lema:condicions equivalents a polinomi irreductible:eq1} \(p(x)=\Irr(\alpha,\KK)\).
-		\item\label{lema:condicions equivalents a polinomi irreductible:eq2} \(p(x)\) és irreductible a~\(\KK[x]\).
+		\item\label{lema:condicions equivalents a polinomi irreductible:eq1}~\(p(x)=\Irr(\alpha,\KK)\).
+		\item\label{lema:condicions equivalents a polinomi irreductible:eq2}~\(p(x)\) és irreductible a~\(\KK[x]\).
 		\item\label{lema:condicions equivalents a polinomi irreductible:eq3} Si~\(q(x)\in\KK[x]\) tal que~\(q(\alpha)=0\), aleshores~\(p(x)\divides q(x)\).
 		\item\label{lema:condicions equivalents a polinomi irreductible:eq4} Si~\(q(x)\in\KK[x]\) tal que~\(q(\alpha)=0\), aleshores~\(\grau(p(x))\leq\grau(q(x))\).
 		\end{enumerate}
@@ -572,8 +572,8 @@
 		Siguin~\(\FF\extensio\KK\) una extensió i~\(\alpha\),~\(\beta\in\FF\) dos elements algebraics sobre~\(\KK\).
 		Aleshores
 		\begin{itemize}
-		\item \(\alpha+\beta\) és algebraic sobre~\(\KK\).
-		\item \(\alpha\beta\) és algebraic sobre~\(\KK\).
+		\item~\(\alpha+\beta\) és algebraic sobre~\(\KK\).
+		\item~\(\alpha\beta\) és algebraic sobre~\(\KK\).
 		\item Si~\(\alpha\neq0\),~\(\alpha^{1}\) és algebraic sobre~\(\KK\).
 		\end{itemize}
 	\end{theorem}
@@ -769,7 +769,7 @@
 		\begin{enumerate}
 			\item\label{lema:condicions pel nombre d'extensions de morfismes:eq1} L'extensió~\(\KK(\alpha)\extensio\KK\) és separable.
 			\item\label{lema:condicions pel nombre d'extensions de morfismes:eq2} L'element~\(\alpha\) és separable.
-			\item\label{lema:condicions pel nombre d'extensions de morfismes:eq3} \(\grauExtensio{\KK(\alpha)}{\KK}=\card{\{g\colon\KK(\alpha)\longrightarrow\FF\mid\left.g\right|_{\KK}=f\text{ i }g\text{ és un morfisme d'anells}\}}\).
+			\item\label{lema:condicions pel nombre d'extensions de morfismes:eq3}~\(\grauExtensio{\KK(\alpha)}{\KK}=\card{\{g\colon\KK(\alpha)\longrightarrow\FF\mid\left.g\right|_{\KK}=f\text{ i }g\text{ és un morfisme d'anells}\}}\).
 		\end{enumerate}
 		\begin{proof}
 %			Tenim que~(\(\ref{lema:condicions pel nombre d'extensions de morfismes:eq1}\implica\ref{lema:condicions pel nombre d'extensions de morfismes:eq2}\)) per la definició de~\myref{def:extensió separable}.
