--- a/body-matter/1r/funcions-de-variable-real.tex
+++ b/body-matter/1r/funcions-de-variable-real.tex
@@ -1,4 +1,4 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../../main.tex]{subfiles}
 
 \begin{document}
 \part{Funcions de variable real}
