--- a/body-matter/1r/geometria-projectiva.tex
+++ b/body-matter/1r/geometria-projectiva.tex
@@ -1,4 +1,4 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../../main.tex]{subfiles}
 
 \begin{document}
 \apendix{Geometria projectiva}
