--- a/body-matter/2n/calcul-en-diverses-variables.tex
+++ b/body-matter/2n/calcul-en-diverses-variables.tex
@@ -1,4 +1,4 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../../main.tex]{subfiles}
 
 \begin{document}
 \part{Càlcul en diverses variables i optimització}
