--- a/body-matter/2n/teoria-de-la-mesura.tex
+++ b/body-matter/2n/teoria-de-la-mesura.tex
@@ -1,4 +1,4 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../../main.tex]{subfiles}
 % Measure Theory, Doob, J.L.
 %  You are different from other books on measure theory in that you accept
 %  probability theory as an essential part of measure theory. This means that
