--- a/front-matter/lletres-gregues.tex
+++ b/front-matter/lletres-gregues.tex
@@ -1,4 +1,4 @@
-\documentclass[../Main.tex]{subfiles}
+\documentclass[../main.tex]{subfiles}
 % https://kconrad.math.uconn.edu/greekchart.pdf
 % https://kconrad.math.uconn.edu/greekwords.pdf
 
