Add comment on possible extra part for 3rd year

--- a/main.tex
+++ b/main.tex
@@ -500,8 +500,11 @@
 	\subfile{body-matter/3r/equacions-diferencials-II.tex}
 	%\subfile{body-matter/3r/calcul-tensorial.tex}
 %	\subfile{body-matter/3r/Apendix3r.tex} % Formes diferencials (?) 
-}										  % Tensor calculus (YouTube)
-										  % Àlgebra homològica (Aquesta queda molt lluny, no crec)
+}                                          % Tensor calculus (YouTube)
+                                           % Àlgebra homològica (Aquesta queda molt lluny, no crec)
+                                           % Catalogue of Spacetimes
+                                           %     https://arxiv.org/pdf/0904.4184.pdf
+                                           %     Coses de GR i GD precalculades
 
  %%%%% BACK MATTER %%%%%
 %\newcommand{\apendix}{} % No
