Fix missing macro

--- a/body-matter/3r/topologia.tex
+++ b/body-matter/3r/topologia.tex
@@ -1902,14 +1902,14 @@
 			\]
 			Per la definició de \myref{def:topologia quocient} trobem que~\(\Ima_{\obert{V}'}(\theta_{g})\) és un obert de~\(X/G\), i com que per hipòtesi~\(G\) és finit, pel Teorema \myref{thm:equivalència obert tancat definició de topologia} trobem que~\(\obert{V}\) és un obert de~\(X/G\).
 			També tenim per la definició de \myref{def:quocient d'un espai per l'acció d'un grup} que~\(\overline{y}\) és un element de~\(\obert{V}\).
-			Per l'observació{obs:els accions de grup en un espai topològic són homeomorfismes} tenim que~\(\theta_{g}\) és un homeomorfisme, i per la definició d'\myref{def:homeomorfisme entre topologies} trobem que~\(\theta_{g}\) és bijectiva.
+			Per l'observació \myref{obs:els accions de grup en un espai topològic són homeomorfismes} tenim que~\(\theta_{g}\) és un homeomorfisme, i per la definició d'\myref{def:homeomorfisme entre topologies} trobem que~\(\theta_{g}\) és bijectiva.
 			Aleshores, com que tenim que~\(\obert{U}'\) i~\(\obert{V}'\) són disjunts tenim que~\(\obert{U}'\) i~\(\obert{V}\) són disjunts.
 			Sigui ara
 			\[
 			    \obert{U}=\bigcup_{g\in G}\Ima_{\obert{U}'}(\theta_{g}).
 			\]
 			Per la definició de \myref{def:topologia quocient} trobem que~\(\Ima_{\obert{U}'}(\theta_{g})\) és un obert de~\(X/G\), i per la definició de \myref{def:topologia} trobem que~\(\obert{U}\) és un obert de~\(X/G\).
-			Per l'observació{obs:els accions de grup en un espai topològic són homeomorfismes} tenim que~\(\theta_{g}\) és un homeomorfisme, i per la definició d'\myref{def:homeomorfisme entre topologies} trobem que~\(\theta_{g}\) és bijectiva.
+			Per l'observació \myref{obs:els accions de grup en un espai topològic són homeomorfismes} tenim que~\(\theta_{g}\) és un homeomorfisme, i per la definició d'\myref{def:homeomorfisme entre topologies} trobem que~\(\theta_{g}\) és bijectiva.
 			Aleshores, com que tenim que~\(\obert{U}'\) i~\(\obert{V}\) són disjunts tenim que~\(\obert{U}\) i~\(\obert{V}\) són disjunts.
 
 			Sigui~\(\pi\) la projecció
