--- a/front-matter/portada/portada.tex
+++ b/front-matter/portada/portada.tex
@@ -22,26 +22,26 @@
 	\tkzDefPoint(-3,0){A2}
 	\tkzDefPoint(0,3){D}
 	\tkzDefPoint(0,-3){D2}
-	
+
 	\tkzDefMidPoint(O,D)   \tkzGetPoint{E}
 	\tkzDefMidPoint(O,E)   \tkzGetPoint{F}
-	
-	\tkzDrawBisector[color=white](A,F,O)   \tkzGetPoint{M1}
-	\tkzDrawBisector[color=white](M1,F,O)   \tkzGetPoint{G}
-	
+
+	\tkzDefSpcTriangle[incentral](A,F,O){t1,M1,t2}
+	\tkzDefSpcTriangle[incentral](M1,F,O){_,G,_}
+
 	\tkzDefLine[orthogonal=through F](G,F) \tkzGetPoint{c}
 	\tkzInterLL(F,c)(O,A) \tkzGetPoint{I}
-	
-	\tkzDrawBisector[color=white](I,F,G)   \tkzGetPoint{H}
+
+	\tkzDefSpcTriangle[incentral](I,F,G){_,H,_}
 	\tkzDefMidPoint(H,A)   \tkzGetPoint{M}
 	\tkzInterLC(O,D)(M,H) \tkzGetPoints{K}{J}
-	
+
 	\tkzInterLC(O,A)(O,G) \tkzGetPoints{G'}{G}
-	
+
 	\tkzInterLC(O,A)(G',J) \tkzGetPoints{L}{N}
 	\tkzDefLine[orthogonal=through L](O,A) \tkzGetPoint{P3}
 	\tkzInterLC(P3,L)(O,A) \tkzGetPoints{P_{14}}{P_{3}}
-	
+
 	\tkzInterCC(P_{3},A2)(O,A) \tkzGetPoints{P_{6}}{P}
 	\tkzInterCC(P_{6},P_{3})(O,A) \tkzGetPoints{P_{9}}{P}
 	\tkzInterCC(P_{9},P_{6})(O,A) \tkzGetPoints{P_{12}}{P}
@@ -53,39 +53,38 @@
 	\tkzInterCC(P_{10},P_{7})(O,A) \tkzGetPoints{P_{13}}{P}
 	\tkzInterCC(P_{13},P_{10})(O,A) \tkzGetPoints{P_{16}}{P}
 	\tkzInterCC(P_{16},P_{13})(O,A) \tkzGetPoints{P_{2}}{P}
-		
+
 	\tkzInterCC(P_{2},P_{16})(O,A) \tkzGetPoints{P_{5}}{P}
 	\tkzInterCC(P_{5},P_{2})(O,A) \tkzGetPoints{P_{8}}{P}
 	\tkzInterCC(P_{8},P_{5})(O,A) \tkzGetPoints{P_{11}}{P}
 	\tkzInterCC(P_{11},P_{8})(O,A) \tkzGetPoints{P_{14}}{P}
 	\tkzInterCC(P_{14},P_{11})(O,A) \tkzGetPoints{P_{0}}{P}
-	
-	\tkzInterLC(F,I)(O,A) \tkzGetPoints{P1}{P2}
-	\tkzInterLC(F,H)(O,A) \tkzGetPoints{P4}{P5}
-	\tkzInterLC(F,G)(O,A) \tkzGetPoints{P6}{P7}
-	\tkzInterLC(F,M1)(O,A) \tkzGetPoints{P8}{P9}
-	
+
+	\tkzInterLC(F,I)(O,A) \tkzGetPoints{P2}{P1}
+	\tkzInterLC(F,H)(O,A) \tkzGetPoints{P5}{P4}
+	\tkzInterLC(F,G)(O,A) \tkzGetPoints{P7}{P6}
+	\tkzInterLC(F,M1)(O,A) \tkzGetPoints{P9}{P8}
+
 	\tkzFillCircle[color = black](O,Alluny)
 	\tkzFillCircle[color = white](O,A)
-			
+
 	\tkzDrawPoints[shape=cross,color=black](E,M)
-	
+
 	\tkzDrawSegment(P9,F)
 	\tkzDrawSegment(P7,F)
 	\tkzDrawSegment(P4,F)
 	\tkzDrawSegment(P1,F)
-	
+
 	\tkzDrawSegment(F,A)
 	\tkzDrawSegment(A2,A)
 	\tkzDrawSegment(D2,D)
-	
-	\tkzDrawSegment(P_{3},P_{14})
-	\tkzDrawSegment(P_{14},P_{3})
-	\tkzDrawSegment(P_{3},A2)
-	
+
+	\tkzDrawSegment(P_{3},P_{9})
+	\tkzDrawSegment(P_{9},A2)
+
 	\tkzDrawCircle(M,H)
 	\tkzDrawCircle(G',J)
-	
+
 	\tkzDrawSegment[dashed](P_{3},P_{0})
 	\tkzDrawSegment[dashed](P_{6},P_{3})
 	\tkzDrawSegment[dashed](P_{9},P_{6})
@@ -103,9 +102,9 @@
 	\tkzDrawSegment[dashed](P_{11},P_{8})
 	\tkzDrawSegment[dashed](P_{14},P_{11})
 	\tkzDrawSegment[dashed](P_{0},P_{14})
-	
+
 	\fontsize{23.5}{23.5}\selectfont
-	\path [postaction={decorate,decoration={text along path, 
+	\path [postaction={decorate,decoration={text along path,
 	reverse path,text align=center,
 	text={|\sffamily\color{black}|Universitat Aut{ò}noma de Barcelona}}}] (-30:3.1cm+0.3em) arc (-30:210:3.1cm+0.3em);
 	\node[black,rotate=180-\anglelogos-90] at (180-\anglelogos:3.1cm+0.6em)
