Correctly typeset labels with multiple authors

--- a/body-matter/3r/equacions-diferencials-II.tex
+++ b/body-matter/3r/equacions-diferencials-II.tex
@@ -15,7 +15,7 @@
 \section{Sistemes integrables}
 	\subsection{Sistemes potencials}
 	\subsection{Sistemes Hamiltonians}
-	\subsection{El model de Lotka-Volterra}
+	\subsection{El model de Lotka--Volterra}
 \section{Sistemes no integrables}
 	\subsection{Teorema del flux tubular}
 	\subsection{Anàlisi qualitativa dels punts d'equilibri}
@@ -23,7 +23,7 @@
 	\subsection{Teorema de Poincaré-Bendixson}
 	\subsection{Funcions de Liapunov}
 	\subsection{Cicles límit}
-	\subsection{Criteri de Bendixson-Dulac}
+	\subsection{Criteri de Bendixson--Dulac}
 %	\subsection{Models a l'ecologia}
 	\subsection{Sistema de van der Pol}
 \chapter{Equacions en derivades parcials}
@@ -50,8 +50,8 @@
 %	\begin{theorem}[Teorema de Hartman]
 %		\labelname{Teorema de Hartman}\label{thm:Teorema de Hartman}
 %	\end{theorem}
-%	\begin{theorem}[Teorema de Perron-Hadamard]
-%		\labelname{Teorema de Perron-Hadamard}\label{thm:Teorema de Perron-Hadamard}
+%	\begin{theorem}[Teorema de Perron--Hadamard]
+%		\labelname{Teorema de Perron--Hadamard}\label{thm:Teorema de Perron--Hadamard}
 %	\end{theorem}
 
 \chapter{Sistemes autònoms al pla}
@@ -65,7 +65,7 @@
 %%	\subsection{Propietats dels sistemes integrables}
 %	\subsection{Sistemes potencials}
 %	\subsection{Sistemes Hamiltonians}
-%	\subsection{Model de Lotka-Voltera}
+%	\subsection{Model de Lotka--Voltera}
 \section{Sistemes no integrables}
 %	\subsection{Teorema del flux tubular}
 %	\subsection{Anàlisi qualitativa dels punts d'equilibri}
@@ -171,9 +171,9 @@
 			%TODO
 		\end{proof}
 	\end{theorem}
-	\subsection{Criteri de Bendixson-Dulac}
-	\begin{theorem}[Criteri de Bendixson-Dulac]
-		\labelname{criteri de Bendixson-Dulac}\label{thm:Criteri de Bendixson-Dulac}
+	\subsection{Criteri de Bendixson--Dulac}
+	\begin{theorem}[Criteri de Bendixson--Dulac]
+		\labelname{criteri de Bendixson--Dulac}\label{thm:Criteri de Bendixson-Dulac}
 		\begin{proof}
 			%TODO
 		\end{proof}
