--- a/body-matter/3r/topologia.tex
+++ b/body-matter/3r/topologia.tex
@@ -1561,9 +1561,9 @@
 		\end{proof}
 	\end{theorem}
 %\section{Els compactes de \ensuremath{\mathbb{R}^{n}}}
-%	\subsection{Teorema de Heine-Borel}
-%	\begin{theorem}[Teorema de Heine-Borel]
-%		\labelname{Teorema de Heine-Borel}\label{thm:Teorema de Heine-Borel}
+%	\subsection{Teorema de Heine--Borel}
+%	\begin{theorem}[Teorema de Heine--Borel]
+%		\labelname{Teorema de Heine--Borel}\label{thm:Teorema de Heine-Borel}
 %		Sigui~\(S\) un subconjunt de~\(\mathbb{R}^{n}\). Aleshores~\(S\) és compacte si i només si~\(S\) és tancat i acotat.
 %		\begin{proof}
 %			%TODO
