--- a/body-matter/temp-intro.tex
+++ b/body-matter/temp-intro.tex
@@ -136,8 +136,8 @@
 		\label{Teorema del Valor Mig}\label{thm:TVM}
 		\emph{hmm trivial}
 	\end{theorem}
-	\begin{theorem}[Desigualtat de Cauchy-Schwarz]
-		\labelname{Teorema de la Desigualtat de Cauchy-Schwarz}\label{thm:Desigualtat de C-S}
+	\begin{theorem}[Desigualtat de Cauchy--Schwarz]
+		\labelname{Teorema de la Desigualtat de Cauchy--Schwarz}\label{thm:Desigualtat de C-S}
 	\end{theorem}
 	\begin{theorem}[Teorema de Taylor]%Teorema de l'error de Taylor?
 		\labelname{Teorema de Taylor}\label{thm:Teorema de Taylor} %caldrà adaptar-lo
@@ -165,8 +165,8 @@
 		una funció.
 		Aleshores~\(F(x)\) és derivable en~\([a,b]\) i~\(F'(x)=f(x)\) per a tot~\(x\) de~\([a,b]\).
 	\end{theorem}
-	\begin{theorem}[Teorema de Bolzano-Weierstrass]
-		\labelname{Teorema de Bolzano-Weierstrass}\label{thm:Teorema de Bolzano-Weierstrass}
+	\begin{theorem}[Teorema de Bolzano--Weierstrass]
+		\labelname{Teorema de Bolzano--Weierstrass}\label{thm:Teorema de Bolzano-Weierstrass}
 		Successió acotada té parcial convergent
 	\end{theorem}
 \section{Trobar lloc per tot això}
