Correctly typeset labels with multiple authors
Now with accents :(

--- a/body-matter/1r/algebra-lineal.tex
+++ b/body-matter/1r/algebra-lineal.tex
@@ -1069,8 +1069,8 @@
 %			\[Ax=b.\qedhere\]
 %		\end{proof}
 %	\end{theorem}
-%	\subsection{Teorema de Rouché-Frobenius}
-%	\begin{theorem}[Teorema de Rouché-Frobenius]
+%	\subsection{Teorema de Rouché--Frobenius}
+%	\begin{theorem}[Teorema de Rouché--Frobenius]
 %		Sigui~\(Ax=b\) un sistema d'equacions lineals sobre un cos~\(\mathbb{K}\) amb~\(A\in\matrius_{m\times n}(\mathbb{K})\) i~\(r=\rang(A)\). Aleshores el sistema és compatible si i només si
 %		\[\rang(A\vert b)=\rang(A).\]
 %		A demés, Si~\(\rang(A)=n\) el sistema és compatible determinat i si~\(\rang(A)<n\) el sistema és compatible indeterminat.
