--- a/body-matter/3r/equacions-diferencials-I.tex
+++ b/body-matter/3r/equacions-diferencials-I.tex
@@ -541,8 +541,8 @@
 		Sigui~\(H\) una família de funcions uniformement equicontínua.
 		Aleshores~\(H\) és una família de funcions equicontínua.
 	\end{observation}
-	\begin{lemma}[Teorema d'Arzelà-Ascoli]
-		\labelname{Teorema d'Arzelà-Ascoli}\label{thm:Teorema d'Arzelà-Ascoli}
+	\begin{lemma}[Teorema d'Arzelà--Ascoli]
+		\labelname{Teorema d'Arzelà--Ascoli}\label{thm:Teorema d'Arzelà-Ascoli}
 		Siguin~\(X\) un compacte i~\((f_{n})_{n\in\mathbb{N}}\) una successió de funcions de~\(\mathcal{C}_{b}(X,T)\) equicontínua i puntualment acotada.
 		Aleshores la successió~\((f_{n})_{n\in\mathbb{N}}\) té una parcial uniformement convergent.
 		\begin{proof}
