--- a/body-matter/3r/equacions-diferencials-II.tex
+++ b/body-matter/3r/equacions-diferencials-II.tex
@@ -20,7 +20,7 @@
 	\subsection{Teorema del flux tubular}
 	\subsection{Anàlisi qualitativa dels punts d'equilibri}
 	\subsection{Comportament límit de les òrbites}
-	\subsection{Teorema de Poincaré-Bendixson}
+	\subsection{Teorema de Poincaré--Bendixson}
 	\subsection{Funcions de Liapunov}
 	\subsection{Cicles límit}
 	\subsection{Criteri de Bendixson--Dulac}
@@ -122,7 +122,7 @@
 			%TODO (pàg. 132 Equações Diferenciais Ordinárias)
 		\end{proof}
 	\end{theorem}
-	\subsection{Teorema de Poincaré-Bendixson}
+	\subsection{Teorema de Poincaré--Bendixson}
 	\begin{definition}[Secció transversal]
 		\labelname{secció transversal}\label{def:secció transversal}
 		Siguin \(\dot{x}=f(x)\) una equació diferencial sobre un obert \(\obert{U}\subseteq\mathbb{R}^{2}\) i \(\Sigma\subseteq\obert{U}\) una corba tal que per a tot \(x,y\in\Sigma\) es satisfà \(f(x)=f(y)\).
@@ -147,8 +147,8 @@
 		Siguin \(\dot{x}=f(x)\) una equació diferencial sobre un obert \(\obert{U}\subseteq\mathbb{R}^{2}\) i \(A\subseteq\obert{U}\) un conjunt invariant que conté punts regulars i punts crítics tal que per a tot punt \(x\in A\) tenim \(\alpha(x)=\{p\}\) i \(\omega(x)=\{q\}\) per a certs punts crítics \(p,q\in A\), i tals que \(A\) admet una aplicació de retorn.
 		Aleshores direm que \(A\) és un gràfic.
 	\end{definition}
-	\begin{theorem}[Teorema de Poincaré-Bendixson]
-		\labelname{Teorema de Poincaré-Bendixson}\label{thm:Teorema de Poincaré-Bendixson}
+	\begin{theorem}[Teorema de Poincaré--Bendixson]
+		\labelname{Teorema de Poincaré--Bendixson}\label{thm:Teorema de Poincaré-Bendixson}
 		Siguin \(\dot{x}=f(x)\) una equació diferencial en \(\Omega\subseteq\mathbb{R}^{2}\) amb un nombre finit de punts crítics i \(\tancat{K}\subseteq\Omega\) un compacte tal que \(\gamma^{+}(x)\subseteq\tancat{K}\).
 		Aleshores
 		\begin{enumerate}
